--- a/SocialliZ-webapp/package.json
+++ b/SocialliZ-webapp/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-router-dom": "^4.3.1",
+    "axios": "^1.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0",
     "react-scripts": "2.0.4",
     "socket.io-client": "^4.5.1"
   },
