--- a/SocialliZ-webapp/package.json
+++ b/SocialliZ-webapp/package.json
@@ -8,6 +8,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "2.0.4",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.4",
     "socket.io-client": "^4.5.1"
   },
   "scripts": {
